# halisp

./: Main.hs  README.md  closures.hal  generators.hal  halisp.cabal  reducers.hal  stdlib  stdlib.hal  stdlib.scm
src/: Core.hs  Eval.hs  Main.hs  Parser.hs
