name:                halisp
version:             0.1.0.0
synopsis:            A toy Scheme interpreter written in Haskell
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Alejandro Gómez
maintainer:          alejandro@dialelo.com
-- copyright:           
category:            Language
build-type:          Simple
cabal-version:       >=1.8

executable halisp
  Hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base ==4.6.*,
                       parsec ==3.1.3,
                       mtl ==2.1.2,
                       transformers ==0.3.0.0
